# otap

./: .editorconfig  CHANGELOG.org  Cargo.toml  LICENCE-CC0  LICENCE-EUPL  README.md  README.org  TODOS.md  cliff.toml  justfile
.github/workflows/: close-prs.yml
.reuse/: dep5
.woodpecker/: .reuse.yml
.zellij/: layout.kdl
docs/: ARCHITECTURE.org
libotap/: Cargo.toml  README.md
libotap/src/: consts.rs  hifitime_epoch_serde.rs  lib.rs
libotap/src/announcements/: mod.rs
libotap/src/attributes/: mod.rs
libotap/src/general_information/: mod.rs  service.rs
libotap/src/requests/: mod.rs
libotap/src/staging/: mod.rs
libotap/src/status/: messages.rs  mod.rs  projects.rs  reports.rs
otap/: Cargo.toml  README.md
otap/src/: cli.rs  credentials.rs  lib.rs  main.rs
