[workspace]
members = [
  "otap",
  "libotap"
]

default-members = [
  "otap",
  "libotap",
  "."
]

resolver = "2"

[workspace.package]
version = "0.1.0"
description = "API Client library for Open Build Service."
authors = [
  "Soc Virnyl Estela <socvirnyl.estela@uncomfyhalomacro.pl>",
  "Gordon Leung <pirateclip@protonmail.com>"
]
edition = "2021"
license = "EUPL-1.2"
homepage = "https://codeberg.org/uncomfyhalomacro/otap"
repository = "https://codeberg.org/uncomfyhalomacro/otap"


[workspace.lints.rust]
warnings = "deny"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# Enable some groups of clippy lints.
suspicious = "deny"
perf = "deny"
# Specific lints to enforce.
todo = "warn"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
disallowed_types = "deny"
manual_let_else = "deny"
lint_groups_priority = "allow"
