[package]
name = "libotap"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.30", features = ["overlapped-lists", "serialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = ">=1.0.184", features = ["derive", "alloc"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.4", features = ["serde"] }
hifitime = "3"
thiserror = "1"

[lints]
workspace = true
