[package]
name = "otap"
version = "0.1.0"
description = "Command line utility for working with Open Build Service."
edition = "2021"
authors = [
  "Soc Virnyl Estela <contact@uncomfyhalomacro.pl>"
]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libotap = { version = "0.1", path = "../libotap" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.4", features = ["serde"] }

