[package]
name = "otap"
description = "Command line utility for working with Open Build Service."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libotap = { version = "0.1", path = "../libotap" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.4", features = ["serde"] }

[lints]
workspace = true
